--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,7 @@ on:
       package:
         required: true
         type: string
-        description: 'Package specified to build'
+        description: "Package specified to build"
       options:
         required: false
         type: string
@@ -22,6 +22,27 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
+      - name: checkout deb repo
+        uses: actions/checkout@v3
+        with:
+          repository: "LesVu/custom_debian_repo"
+          path: "debian"
+
+      - name: Get Date
+        id: get-date
+        run: |
+          echo "date=$(TZ='Asia/Singapore' /bin/date "+%I:%M%p_%d/%m/%Y")" >> $GITHUB_OUTPUT
+        shell: bash
+
+      - name: Mkdir
+        run: mkdir -p ~/.ccache
+
+      - name: ccache cache files
+        uses: actions/cache/restore@v3
+        with:
+          path: ~/.ccache
+          key: build-bookworm-arm64-ccache-
+
       - name: Install deps
         run: |
           export DEBIAN_FRONTEND=noninteractive
@@ -29,7 +50,7 @@ jobs:
           sudo cat <<EOF > "/etc/apt/sources.list"
           deb-src http://deb.debian.org/debian unstable main
           EOF
-          apt-get update && apt-get install -q -y \
+          sudo apt-get update && sudo apt-get install -q -y \
           git build-essential apt-utils git-buildpackage dh-autoreconf quilt dh-ocaml time libz3-dev cowbuilder pbuilder
           mkdir build-package
           cd build-package
@@ -58,11 +79,11 @@ jobs:
           sudo mkdir -p /var/cache/pbuilder/deps/debian
           sudo cp debian/pool/* /var/cache/pbuilder/deps/debian
           if [ -e "/var/cache/pbuilder/base.tgz" ]; then
-            pbuilder update
+            sudo pbuilder update
           else
-            pbuilder create --distribution bookworm
+            sudo pbuilder create --distribution bookworm
             echo "apt-mark hold hello hello-traditional" > command.sh
-            pbuilder execute --save-after-exec ./command.sh
+            sudo pbuilder execute --save-after-exec ./command.sh
           fi
 
       - name: Build
@@ -75,17 +96,17 @@ jobs:
           if [[ "$input_string" == *" "* ]]; then
             IFS=" " read -ra words <<< "$input_string"
             for word in "${words[@]}"; do
-              DEPS=debian pbuilder build ${{ inputs.options }} ${word}*.dsc
+              DEPS=debian sudo pbuilder build ${{ inputs.options }} ${word}*.dsc
               sudo cp -r /var/cache/pbuilder/result/*.deb /var/cache/pbuilder/deps/debian
             done
           else
-            DEPS=debian pbuilder build ${{ inputs.options }} ${input_string}*.dsc
+            DEPS=debian sudo pbuilder build ${{ inputs.options }} ${input_string}*.dsc
           fi
 
       - name: Move to debian repo
         run: |
-          cp /var/cache/pbuilder/result/*.deb debian/pool
-          rm -f debian/pool/*-dbg*.deb
+          cp /var/cache/pbuilder/result/*.deb debian/debian/pool
+          rm -f debian/debian/pool/*-dbg*.deb
 
       - name: Import GPG key
         uses: crazy-max/ghaction-import-gpg@v5
@@ -97,7 +118,7 @@ jobs:
 
       - name: Write new package to repo
         run: |
-          cd $GITHUB_WORKSPACE/debian
+          cd $GITHUB_WORKSPACE/debian/debian
           rm Packages || echo "Failed to remove packages file"
           rm Packages.gz || echo "Failed to remove packages.gz file"
           rm Release || echo "Failed to remove release file"
@@ -110,6 +131,13 @@ jobs:
           gpg --default-key LesVu --clearsign -o - Release > InRelease || error "failed to sign InRelease with gpg"
 
       - name: Commit and push
-        uses: stefanzweifel/git-auto-commit-action@v4
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          file_pattern: 'debian/*'
+          file_pattern: "debian/*"
+          repository: "debian"
+
+      - uses: actions/cache/save@v3
+        if: always()
+        with:
+          path: ~/.ccache
+          key: build-bookworm-arm64-ccache-${{ steps.get-date.outputs.date }}
