--- a/.github/workflows/repo.yaml
+++ b/.github/workflows/repo.yaml
@@ -11,13 +11,14 @@ jobs:
 
     steps:
       - name: checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: checkout deb repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: "LesVu/custom_debian_repo"
           path: "debian"
+          token: ${{ secrets.PAT }}
 
       - name: Fix
         run: |
@@ -26,7 +27,7 @@ jobs:
           sudo apt-get install -y -q apt-utils git gnupg
 
       - name: Import GPG key
-        uses: crazy-max/ghaction-import-gpg@v5
+        uses: crazy-max/ghaction-import-gpg@v6
         with:
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
 
@@ -48,7 +49,7 @@ jobs:
           gpg --default-key LesVu --clearsign -o - Release > InRelease || error "failed to sign InRelease with gpg"
 
       - name: Commit and push
-        uses: stefanzweifel/git-auto-commit-action@v4
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
           file_pattern: "debian/*"
           repository: "debian"
