--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,7 +52,7 @@ jobs:
           Types: deb-src
           URIs: http://deb.debian.org/debian
           Suites: unstable
-          omponents: main
+          Components: main
           Signed-By: /usr/share/keyrings/debian-archive-keyring.gpg
           EOF
           sudo apt-get update && sudo apt-get install -q -y \
