--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -82,7 +82,7 @@ jobs:
           sudo chmod +x /etc/pbuilder/hook.d/D10apt-ftparchive
           sudo rm -rf /var/cache/pbuilder/deps/debian
           sudo mkdir -p /var/cache/pbuilder/deps/debian
-          sudo cp debian/pool/* /var/cache/pbuilder/deps/debian
+          sudo cp debian/debian/pool/* /var/cache/pbuilder/deps/debian
           if [ -e "/var/cache/pbuilder/base.tgz" ]; then
             sudo pbuilder update
           else
