--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -56,7 +56,7 @@ jobs:
           Signed-By: /usr/share/keyrings/debian-archive-keyring.gpg
           EOF
           sudo apt-get update && sudo apt-get install -q -y \
-          git build-essential apt-utils git-buildpackage dh-autoreconf quilt dh-ocaml time libz3-dev cowbuilder pbuilder
+          git build-essential apt-utils git-buildpackage dh-autoreconf quilt dh-ocaml time libz3-dev cowbuilder pbuilder reprepro
           mkdir build-package
           cd build-package
           apt-get source ${{ inputs.package }}
@@ -108,11 +108,6 @@ jobs:
             DEPS=debian sudo pbuilder build ${{ inputs.options }} ${input_string}*.dsc
           fi
 
-      - name: Move to debian repo
-        run: |
-          cp /var/cache/pbuilder/result/*.deb debian/debian/pool
-          rm -f debian/debian/pool/*-dbg*.deb
-
       - name: Import GPG key
         uses: crazy-max/ghaction-import-gpg@v5
         with:
@@ -123,17 +118,9 @@ jobs:
 
       - name: Write new package to repo
         run: |
-          cd $GITHUB_WORKSPACE/debian/debian
-          rm Packages || echo "Failed to remove packages file"
-          rm Packages.gz || echo "Failed to remove packages.gz file"
-          rm Release || echo "Failed to remove release file"
-          rm Release.gpg || echo "Failed to remove release.gpg file"
-          rm InRelease || echo "Failed to remove inrelease file"
-          dpkg-scanpackages --multiversion . > Packages
-          gzip -k -f Packages
-          apt-ftparchive release . > Release
-          gpg --default-key LesVu -abs -o - Release > Release.gpg || error "failed to sign Release.gpg with gpg "
-          gpg --default-key LesVu --clearsign -o - Release > InRelease || error "failed to sign InRelease with gpg"
+          cd $GITHUB_WORKSPACE/debian
+          reprepro -V -b ./debian --confdir ./conf --section other -C main includedeb bookworm /var/cache/pbuilder/result/*.deb || echo "Failed to remove packages file"
+          rm -rf /var/cache/pbuilder/result/*
 
       - name: Commit and push
         uses: stefanzweifel/git-auto-commit-action@v5
