--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,6 +11,14 @@ on:
         required: false
         type: string
         description: Option passed
+      source:
+        description: 'Where to get the source code'
+        required: false
+        default: 'debian_sid'
+        type: choice
+        options:
+          - git
+          - debian_sid
 
 jobs:
   package-debian:
@@ -73,16 +81,16 @@ jobs:
           sudo cat <<'EOF' | sudo tee "/etc/pbuilder/hook.d/D10apt-ftparchive" >/dev/null 
           DEPSPATH="$DEPSBASE/$DEPS"
           if [ -n "$DEPS" ] && [ -d "$DEPSPATH" ] ; then
-                  apt-get install --assume-yes apt-utils
-                  ( cd "$DEPSPATH"; apt-ftparchive packages . > Packages )
-                  echo "deb [trusted=yes] file://$DEPSPATH ./" >> /etc/apt/sources.list
-                  apt-get update
+            apt-get install --assume-yes apt-utils
+            ( cd "$DEPSPATH"; apt-ftparchive packages . > Packages )
+            echo "deb [trusted=yes] file://$DEPSPATH ./" >> /etc/apt/sources.list
+            echo "deb [trusted=yes] https://lesvu.github.io/custom_debian_repo/debian bookworm main" >> /etc/apt/sources.list
+            apt-get update
           fi
           EOF
           sudo chmod +x /etc/pbuilder/hook.d/D10apt-ftparchive
           sudo rm -rf /var/cache/pbuilder/deps/debian
           sudo mkdir -p /var/cache/pbuilder/deps/debian
-          sudo cp debian/debian/pool/* /var/cache/pbuilder/deps/debian
           if [ -e "/var/cache/pbuilder/base.tgz" ]; then
             sudo pbuilder update
           else
