--- a/.github/workflows/fex_emu.yaml
+++ b/.github/workflows/fex_emu.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Install deps
         run: |
           sudo apt-get update && sudo apt-get install -q -y \
-          git cmake ninja-build build-essential pkg-config ccache clang llvm lld binfmt-support \
+          git reprepro cmake ninja-build build-essential pkg-config ccache clang llvm lld binfmt-support \
           libsdl2-dev libepoxy-dev libssl-dev python3-setuptools g++-x86-64-linux-gnu \
           libgcc-12-dev-i386-cross libgcc-12-dev-amd64-cross nasm python3-clang \
           libstdc++-12-dev-i386-cross libstdc++-12-dev-amd64-cross libstdc++-12-dev-arm64-cross \
@@ -69,10 +69,6 @@ jobs:
           path: ~/.ccache
           key: fex-bookworm-arm64-ccache-${{ steps.get-date.outputs.date }}
 
-      - name: Move to debian repo
-        run: |
-          mv artifacts/*.deb debian/debian/pool
-
       - name: Import GPG key
         uses: crazy-max/ghaction-import-gpg@v6
         with:
@@ -83,17 +79,9 @@ jobs:
 
       - name: Write new package to repo
         run: |
-          cd $GITHUB_WORKSPACE/debian/debian
-          rm Packages || echo "Failed to remove packages file"
-          rm Packages.gz || echo "Failed to remove packages.gz file"
-          rm Release || echo "Failed to remove release file"
-          rm Release.gpg || echo "Failed to remove release.gpg file"
-          rm InRelease || echo "Failed to remove inrelease file"
-          dpkg-scanpackages --multiversion . > Packages
-          gzip -k -f Packages
-          apt-ftparchive release . > Release
-          gpg --default-key LesVu -abs -o - Release > Release.gpg || error "failed to sign Release.gpg with gpg "
-          gpg --default-key LesVu --clearsign -o - Release > InRelease || error "failed to sign InRelease with gpg"
+          cd $GITHUB_WORKSPACE/debian
+          reprepro -V -b ./debian --confdir ./conf --section other -C main includedeb bookworm ../artifacts/*.deb || echo "Failed to write new packages file"
+          rm -rf ../artifacts/
 
       - name: Commit and push
         uses: stefanzweifel/git-auto-commit-action@v5
