--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,6 +19,10 @@ on:
         options:
           - git
           - debian_sid
+      git_uri:
+        required: false
+        type: string
+        description: Git repository to build
 
 jobs:
   package-debian:
@@ -77,7 +81,7 @@ jobs:
           EOF
           sudo mkdir -p /etc/pbuilder/hook.d/
           sudo cat <<'EOF' | sudo tee "/etc/pbuilder/hook.d/D10apt-ftparchive" >/dev/null 
-          apt-get install --assume-yes apt-utils
+          apt-get install --assume-yes apt-utils ca-certificates
           ( cd "$DEPS"; apt-ftparchive packages . > Packages )
           echo "deb [trusted=yes] file://$DEPS ./" >> /etc/apt/sources.list
           echo "deb [trusted=yes] https://lesvu.github.io/custom_debian_repo/debian bookworm main" >> /etc/apt/sources.list
