--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -71,7 +71,11 @@ jobs:
           git build-essential apt-utils git-buildpackage dh-autoreconf quilt dh-ocaml time libz3-dev cowbuilder pbuilder reprepro
           mkdir build-package
           cd build-package
-          apt-get source ${{ inputs.package }}
+          if [ "${{inputs.source}}" == "git" ]; then
+            git clone ${{ inputs.git_uri }}
+          else
+            apt-get source ${{ inputs.package }}
+          fi
           cd ..
           sudo cat <<'EOF' | sudo tee "/etc/pbuilderrc" >/dev/null 
           # the hook dir may already be set/populated!
@@ -101,17 +105,28 @@ jobs:
       - name: Build
         run: |
           cd build-package
-          # pbuilder build binutils*.dsc
-          # cp /var/cache/pbuilder/result/*.deb /var/cache/pbuilder/deps/debian
           input_string="${{inputs.package}}"
           if [[ "$input_string" == *" "* ]]; then
             IFS=" " read -ra words <<< "$input_string"
             for word in "${words[@]}"; do
-              sudo pbuilder build ${{ inputs.options }} ${word}*.dsc
-              sudo cp -r /var/cache/pbuilder/result/*.deb /var/cache/pbuilder/deps/debian
+              if [ "${{inputs.source}}" == "git" ]; then
+                cd ${word}*
+                sudo GIT_PBUILDER_AUTOCONF=no GIT_PBUILDER_OPTIONS="${{inputs.options}}" BUILDER=pbuilder gbp buildpackage --git-pbuilder
+                cd ..
+              else
+                sudo pbuilder build ${{ inputs.options }} ${word}*.dsc
+              fi
+              sudo rm -f /var/cache/pbuilder/result/*-dbg*.deb
+              sudo cp /var/cache/pbuilder/result/*.deb /var/cache/pbuilder/deps/debian
             done
           else
-            sudo pbuilder build ${{ inputs.options }} ${input_string}*.dsc
+            if [ "${{inputs.source}}" == "git" ]; then
+              cd ${input_string}*
+              sudo GIT_PBUILDER_AUTOCONF=no GIT_PBUILDER_OPTIONS="${{inputs.options}}" BUILDER=pbuilder gbp buildpackage --git-pbuilder
+              cd ..
+            else
+              sudo pbuilder build ${{ inputs.options }} ${input_string}*.dsc
+            fi
           fi
 
       - name: Import GPG key
@@ -124,6 +139,7 @@ jobs:
 
       - name: Write new package to repo
         run: |
+          sudo rm -f /var/cache/pbuilder/result/*-dbg*.deb
           cd $GITHUB_WORKSPACE/debian
           reprepro -V -b ./debian --confdir ./conf --section other -C main includedeb bookworm /var/cache/pbuilder/result/*.deb || echo "Failed to write new packages file"
           sudo rm -rf /var/cache/pbuilder/result/*
