--- a/.github/workflows/fex_emu.yaml
+++ b/.github/workflows/fex_emu.yaml
@@ -66,7 +66,8 @@ jobs:
           libgcc-12-dev-i386-cross libgcc-12-dev-amd64-cross nasm python3-clang \
           libstdc++-12-dev-i386-cross libstdc++-12-dev-amd64-cross libstdc++-12-dev-arm64-cross \
           squashfs-tools squashfuse libc-bin libc6-dev-i386-amd64-cross \
-          lib32stdc++-12-dev-amd64-cross apt-utils
+          lib32stdc++-12-dev-amd64-cross apt-utils qtdeclarative5-dev qml-module-qtquick-controls \
+          qml-module-qtquick-controls2 qml-module-qtquick-dialogs
 
       - name: Build
         run: |
